generated/js_mappingParser.js
// Generated from grammars/js_mapping.g4 by ANTLR 4.7.1
// jshint ignore: start
var antlr4 = require('antlr4/index');
var js_mappingListener = require('./js_mappingListener').js_mappingListener;
var js_mappingVisitor = require('./js_mappingVisitor').js_mappingVisitor;

var grammarFileName = "js_mapping.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'map'", "'='", "'uses'", "'as'", "'alias'", 
                     "'imports'", "'group'", "'{'", "'}'", "'<<'", "'>>'", 
                     "'extends'", "'('", "','", "')'", "':'", "'->'", "';'", 
                     "'..'", "'*'", "'.'", "'default'", "'where'", "'check'", 
                     "'log'", "'then'", "'types'", "'type+'", "'first'", 
                     "'not_first'", "'last'", "'not_last'", "'only_one'", 
                     "'share'", "'collate'", "'source'", "'target'", "'queried'", 
                     "'produced'" ];

var symbolicNames = [ null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, "BOOL", "DATETIME", "TIME", 
                      "IDENTIFIER", "DELIMITEDIDENTIFIER", "STRING", "INTEGER", 
                      "NUMBER", "WS", "COMMENT", "LINE_COMMENT" ];

var ruleNames =  [ "structureMap", "mapId", "url", "identifier", "structure", 
                   "structureAlias", "imports", "group", "rules", "typeMode", 
                   "js_extends", "parameters", "parameter", "type", "js_rule", 
                   "ruleName", "ruleSources", "ruleSource", "ruleTargets", 
                   "sourceType", "upperBound", "ruleContext", "sourceDefault", 
                   "alias", "whereClause", "checkClause", "log", "dependent", 
                   "ruleTarget", "transform", "invocation", "paramList", 
                   "param", "fhirPath", "literal", "groupTypeMode", "sourceListMode", 
                   "targetListMode", "inputMode", "modelMode" ];

function js_mappingParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

js_mappingParser.prototype = Object.create(antlr4.Parser.prototype);
js_mappingParser.prototype.constructor = js_mappingParser;

Object.defineProperty(js_mappingParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

js_mappingParser.EOF = antlr4.Token.EOF;
js_mappingParser.T__0 = 1;
js_mappingParser.T__1 = 2;
js_mappingParser.T__2 = 3;
js_mappingParser.T__3 = 4;
js_mappingParser.T__4 = 5;
js_mappingParser.T__5 = 6;
js_mappingParser.T__6 = 7;
js_mappingParser.T__7 = 8;
js_mappingParser.T__8 = 9;
js_mappingParser.T__9 = 10;
js_mappingParser.T__10 = 11;
js_mappingParser.T__11 = 12;
js_mappingParser.T__12 = 13;
js_mappingParser.T__13 = 14;
js_mappingParser.T__14 = 15;
js_mappingParser.T__15 = 16;
js_mappingParser.T__16 = 17;
js_mappingParser.T__17 = 18;
js_mappingParser.T__18 = 19;
js_mappingParser.T__19 = 20;
js_mappingParser.T__20 = 21;
js_mappingParser.T__21 = 22;
js_mappingParser.T__22 = 23;
js_mappingParser.T__23 = 24;
js_mappingParser.T__24 = 25;
js_mappingParser.T__25 = 26;
js_mappingParser.T__26 = 27;
js_mappingParser.T__27 = 28;
js_mappingParser.T__28 = 29;
js_mappingParser.T__29 = 30;
js_mappingParser.T__30 = 31;
js_mappingParser.T__31 = 32;
js_mappingParser.T__32 = 33;
js_mappingParser.T__33 = 34;
js_mappingParser.T__34 = 35;
js_mappingParser.T__35 = 36;
js_mappingParser.T__36 = 37;
js_mappingParser.T__37 = 38;
js_mappingParser.T__38 = 39;
js_mappingParser.BOOL = 40;
js_mappingParser.DATETIME = 41;
js_mappingParser.TIME = 42;
js_mappingParser.IDENTIFIER = 43;
js_mappingParser.DELIMITEDIDENTIFIER = 44;
js_mappingParser.STRING = 45;
js_mappingParser.INTEGER = 46;
js_mappingParser.NUMBER = 47;
js_mappingParser.WS = 48;
js_mappingParser.COMMENT = 49;
js_mappingParser.LINE_COMMENT = 50;

js_mappingParser.RULE_structureMap = 0;
js_mappingParser.RULE_mapId = 1;
js_mappingParser.RULE_url = 2;
js_mappingParser.RULE_identifier = 3;
js_mappingParser.RULE_structure = 4;
js_mappingParser.RULE_structureAlias = 5;
js_mappingParser.RULE_imports = 6;
js_mappingParser.RULE_group = 7;
js_mappingParser.RULE_rules = 8;
js_mappingParser.RULE_typeMode = 9;
js_mappingParser.RULE_js_extends = 10;
js_mappingParser.RULE_parameters = 11;
js_mappingParser.RULE_parameter = 12;
js_mappingParser.RULE_type = 13;
js_mappingParser.RULE_js_rule = 14;
js_mappingParser.RULE_ruleName = 15;
js_mappingParser.RULE_ruleSources = 16;
js_mappingParser.RULE_ruleSource = 17;
js_mappingParser.RULE_ruleTargets = 18;
js_mappingParser.RULE_sourceType = 19;
js_mappingParser.RULE_upperBound = 20;
js_mappingParser.RULE_ruleContext = 21;
js_mappingParser.RULE_sourceDefault = 22;
js_mappingParser.RULE_alias = 23;
js_mappingParser.RULE_whereClause = 24;
js_mappingParser.RULE_checkClause = 25;
js_mappingParser.RULE_log = 26;
js_mappingParser.RULE_dependent = 27;
js_mappingParser.RULE_ruleTarget = 28;
js_mappingParser.RULE_transform = 29;
js_mappingParser.RULE_invocation = 30;
js_mappingParser.RULE_paramList = 31;
js_mappingParser.RULE_param = 32;
js_mappingParser.RULE_fhirPath = 33;
js_mappingParser.RULE_literal = 34;
js_mappingParser.RULE_groupTypeMode = 35;
js_mappingParser.RULE_sourceListMode = 36;
js_mappingParser.RULE_targetListMode = 37;
js_mappingParser.RULE_inputMode = 38;
js_mappingParser.RULE_modelMode = 39;

function StructureMapContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = js_mappingParser.RULE_structureMap;
    return this;
}

StructureMapContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StructureMapContext.prototype.constructor = StructureMapContext;

StructureMapContext.prototype.mapId = function() {
    return this.getTypedRuleContext(MapIdContext,0);
};

StructureMapContext.prototype.EOF = function() {
    return this.getToken(js_mappingParser.EOF, 0);
};

StructureMapContext.prototype.structure = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(StructureContext);
    } else {
        return this.getTypedRuleContext(StructureContext,i);
    }
};

StructureMapContext.prototype.imports = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ImportsContext);
    } else {
        return this.getTypedRuleContext(ImportsContext,i);
    }
};

StructureMapContext.prototype.group = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(GroupContext);
    } else {
        return this.getTypedRuleContext(GroupContext,i);
    }
};

StructureMapContext.prototype.enterRule = function(listener) {
    if(listener instanceof js_mappingListener ) {
        listener.enterStructureMap(this);
	}
};

StructureMapContext.prototype.exitRule = function(listener) {
    if(listener instanceof js_mappingListener ) {
        listener.exitStructureMap(this);
	}
};

StructureMapContext.prototype.accept = function(visitor) {
    if ( visitor instanceof js_mappingVisitor ) {
        return visitor.visitStructureMap(this);
    } else {
        return visitor.visitChildren(this);
    }
};




js_mappingParser.StructureMapContext = StructureMapContext;

js_mappingParser.prototype.structureMap = function() {

    var localctx = new StructureMapContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, js_mappingParser.RULE_structureMap);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 80;
        this.mapId();
        this.state = 84;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===js_mappingParser.T__2) {
            this.state = 81;
            this.structure();
            this.state = 86;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 90;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===js_mappingParser.T__5) {
            this.state = 87;
            this.imports();
            this.state = 92;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 94; 
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        do {
            this.state = 93;
            this.group();
            this.state = 96; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        } while(_la===js_mappingParser.T__6);
        this.state = 98;
        this.match(js_mappingParser.EOF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function MapIdContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = js_mappingParser.RULE_mapId;
    return this;
}

MapIdContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
MapIdContext.prototype.constructor = MapIdContext;

MapIdContext.prototype.url = function() {
    return this.getTypedRuleContext(UrlContext,0);
};

MapIdContext.prototype.identifier = function() {
    return this.getTypedRuleContext(IdentifierContext,0);
};

MapIdContext.prototype.enterRule = function(listener) {
    if(listener instanceof js_mappingListener ) {
        listener.enterMapId(this);
	}
};

MapIdContext.prototype.exitRule = function(listener) {
    if(listener instanceof js_mappingListener ) {
        listener.exitMapId(this);
	}
};

MapIdContext.prototype.accept = function(visitor) {
    if ( visitor instanceof js_mappingVisitor ) {
        return visitor.visitMapId(this);
    } else {
        return visitor.visitChildren(this);
    }
};




js_mappingParser.MapIdContext = MapIdContext;

js_mappingParser.prototype.mapId = function() {

    var localctx = new MapIdContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, js_mappingParser.RULE_mapId);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 100;
        this.match(js_mappingParser.T__0);
        this.state = 101;
        this.url();
        this.state = 102;
        this.match(js_mappingParser.T__1);
        this.state = 103;
        this.identifier();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function UrlContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = js_mappingParser.RULE_url;
    return this;
}

UrlContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
UrlContext.prototype.constructor = UrlContext;

UrlContext.prototype.DELIMITEDIDENTIFIER = function() {
    return this.getToken(js_mappingParser.DELIMITEDIDENTIFIER, 0);
};

UrlContext.prototype.enterRule = function(listener) {
    if(listener instanceof js_mappingListener ) {
        listener.enterUrl(this);
	}
};

UrlContext.prototype.exitRule = function(listener) {
    if(listener instanceof js_mappingListener ) {
        listener.exitUrl(this);
	}
};

UrlContext.prototype.accept = function(visitor) {
    if ( visitor instanceof js_mappingVisitor ) {
        return visitor.visitUrl(this);
    } else {
        return visitor.visitChildren(this);
    }
};




js_mappingParser.UrlContext = UrlContext;

js_mappingParser.prototype.url = function() {

    var localctx = new UrlContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, js_mappingParser.RULE_url);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 105;
        this.match(js_mappingParser.DELIMITEDIDENTIFIER);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function IdentifierContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = js_mappingParser.RULE_identifier;
    return this;
}

IdentifierContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
IdentifierContext.prototype.constructor = IdentifierContext;

IdentifierContext.prototype.IDENTIFIER = function() {
    return this.getToken(js_mappingParser.IDENTIFIER, 0);
};

IdentifierContext.prototype.DELIMITEDIDENTIFIER = function() {
    return this.getToken(js_mappingParser.DELIMITEDIDENTIFIER, 0);
};

IdentifierContext.prototype.enterRule = function(listener) {
    if(listener instanceof js_mappingListener ) {
        listener.enterIdentifier(this);
	}
};

IdentifierContext.prototype.exitRule = function(listener) {
    if(listener instanceof js_mappingListener ) {
        listener.exitIdentifier(this);
	}
};

IdentifierContext.prototype.accept = function(visitor) {
    if ( visitor instanceof js_mappingVisitor ) {
        return visitor.visitIdentifier(this);
    } else {
        return visitor.visitChildren(this);
    }
};




js_mappingParser.IdentifierContext = IdentifierContext;

js_mappingParser.prototype.identifier = function() {

    var localctx = new IdentifierContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, js_mappingParser.RULE_identifier);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 107;
        _la = this._input.LA(1);
        if(!(_la===js_mappingParser.IDENTIFIER || _la===js_mappingParser.DELIMITEDIDENTIFIER)) {
        this._errHandler.recoverInline(this);
        }
        else {
        	this._errHandler.reportMatch(this);
            this.consume();
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function StructureContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = js_mappingParser.RULE_structure;
    return this;
}

StructureContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StructureContext.prototype.constructor = StructureContext;

StructureContext.prototype.url = function() {
    return this.getTypedRuleContext(UrlContext,0);
};

StructureContext.prototype.modelMode = function() {
    return this.getTypedRuleContext(ModelModeContext,0);
};

StructureContext.prototype.structureAlias = function() {
    return this.getTypedRuleContext(StructureAliasContext,0);
};

StructureContext.prototype.enterRule = function(listener) {
    if(listener instanceof js_mappingListener ) {
        listener.enterStructure(this);
	}
};

StructureContext.prototype.exitRule = function(listener) {
    if(listener instanceof js_mappingListener ) {
        listener.exitStructure(this);
	}
};

StructureContext.prototype.accept = function(visitor) {
    if ( visitor instanceof js_mappingVisitor ) {
        return visitor.visitStructure(this);
    } else {
        return visitor.visitChildren(this);
    }
};




js_mappingParser.StructureContext = StructureContext;

js_mappingParser.prototype.structure = function() {

    var localctx = new StructureContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, js_mappingParser.RULE_structure);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 109;
        this.match(js_mappingParser.T__2);
        this.state = 110;
        this.url();
        this.state = 112;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===js_mappingParser.T__4) {
            this.state = 111;
            this.structureAlias();
        }

        this.state = 114;
        this.match(js_mappingParser.T__3);
        this.state = 115;
        this.modelMode();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function StructureAliasContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = js_mappingParser.RULE_structureAlias;
    return this;
}

StructureAliasContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StructureAliasContext.prototype.constructor = StructureAliasContext;

StructureAliasContext.prototype.identifier = function() {
    return this.getTypedRuleContext(IdentifierContext,0);
};

StructureAliasContext.prototype.enterRule = function(listener) {
    if(listener instanceof js_mappingListener ) {
        listener.enterStructureAlias(this);
	}
};

StructureAliasContext.prototype.exitRule = function(listener) {
    if(listener instanceof js_mappingListener ) {
        listener.exitStructureAlias(this);
	}
};

StructureAliasContext.prototype.accept = function(visitor) {
    if ( visitor instanceof js_mappingVisitor ) {
        return visitor.visitStructureAlias(this);
    } else {
        return visitor.visitChildren(this);
    }
};




js_mappingParser.StructureAliasContext = StructureAliasContext;

js_mappingParser.prototype.structureAlias = function() {

    var localctx = new StructureAliasContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, js_mappingParser.RULE_structureAlias);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 117;
        this.match(js_mappingParser.T__4);
        this.state = 118;
        this.identifier();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ImportsContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = js_mappingParser.RULE_imports;
    return this;
}

ImportsContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ImportsContext.prototype.constructor = ImportsContext;

ImportsContext.prototype.url = function() {
    return this.getTypedRuleContext(UrlContext,0);
};

ImportsContext.prototype.enterRule = function(listener) {
    if(listener instanceof js_mappingListener ) {
        listener.enterImports(this);
	}
};

ImportsContext.prototype.exitRule = function(listener) {
    if(listener instanceof js_mappingListener ) {
        listener.exitImports(this);
	}
};

ImportsContext.prototype.accept = function(visitor) {
    if ( visitor instanceof js_mappingVisitor ) {
        return visitor.visitImports(this);
    } else {
        return visitor.visitChildren(this);
    }
};




js_mappingParser.ImportsContext = ImportsContext;

js_mappingParser.prototype.imports = function() {

    var localctx = new ImportsContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, js_mappingParser.RULE_imports);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 120;
        this.match(js_mappingParser.T__5);
        this.state = 121;
        this.url();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function GroupContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = js_mappingParser.RULE_group;
    return this;
}

GroupContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
GroupContext.prototype.constructor = GroupContext;

GroupContext.prototype.identifier = function() {
    return this.getTypedRuleContext(IdentifierContext,0);
};

GroupContext.prototype.parameters = function() {
    return this.getTypedRuleContext(ParametersContext,0);
};

GroupContext.prototype.rules = function() {
    return this.getTypedRuleContext(RulesContext,0);
};

GroupContext.prototype.js_extends = function() {
    return this.getTypedRuleContext(Js_extendsContext,0);
};

GroupContext.prototype.typeMode = function() {
    return this.getTypedRuleContext(TypeModeContext,0);
};

GroupContext.prototype.enterRule = function(listener) {
    if(listener instanceof js_mappingListener ) {
        listener.enterGroup(this);
	}
};

GroupContext.prototype.exitRule = function(listener) {
    if(listener instanceof js_mappingListener ) {
        listener.exitGroup(this);
	}
};

GroupContext.prototype.accept = function(visitor) {
    if ( visitor instanceof js_mappingVisitor ) {
        return visitor.visitGroup(this);
    } else {
        return visitor.visitChildren(this);
    }
};




js_mappingParser.GroupContext = GroupContext;

js_mappingParser.prototype.group = function() {

    var localctx = new GroupContext(this, this._ctx, this.state);
    this.enterRule(localctx, 14, js_mappingParser.RULE_group);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 123;
        this.match(js_mappingParser.T__6);
        this.state = 124;
        this.identifier();
        this.state = 125;
        this.parameters();
        this.state = 127;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===js_mappingParser.T__11) {
            this.state = 126;
            this.js_extends();
        }

        this.state = 130;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===js_mappingParser.T__9) {
            this.state = 129;
            this.typeMode();
        }

        this.state = 132;
        this.rules();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function RulesContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = js_mappingParser.RULE_rules;
    return this;
}

RulesContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
RulesContext.prototype.constructor = RulesContext;

RulesContext.prototype.js_rule = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(Js_ruleContext);
    } else {
        return this.getTypedRuleContext(Js_ruleContext,i);
    }
};

RulesContext.prototype.enterRule = function(listener) {
    if(listener instanceof js_mappingListener ) {
        listener.enterRules(this);
	}
};

RulesContext.prototype.exitRule = function(listener) {
    if(listener instanceof js_mappingListener ) {
        listener.exitRules(this);
	}
};

RulesContext.prototype.accept = function(visitor) {
    if ( visitor instanceof js_mappingVisitor ) {
        return visitor.visitRules(this);
    } else {
        return visitor.visitChildren(this);
    }
};




js_mappingParser.RulesContext = RulesContext;

js_mappingParser.prototype.rules = function() {

    var localctx = new RulesContext(this, this._ctx, this.state);
    this.enterRule(localctx, 16, js_mappingParser.RULE_rules);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 134;
        this.match(js_mappingParser.T__7);
        this.state = 136; 
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        do {
            this.state = 135;
            this.js_rule();
            this.state = 138; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        } while(_la===js_mappingParser.IDENTIFIER || _la===js_mappingParser.DELIMITEDIDENTIFIER);
        this.state = 140;
        this.match(js_mappingParser.T__8);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function TypeModeContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = js_mappingParser.RULE_typeMode;
    return this;
}

TypeModeContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
TypeModeContext.prototype.constructor = TypeModeContext;

TypeModeContext.prototype.groupTypeMode = function() {
    return this.getTypedRuleContext(GroupTypeModeContext,0);
};

TypeModeContext.prototype.enterRule = function(listener) {
    if(listener instanceof js_mappingListener ) {
        listener.enterTypeMode(this);
	}
};

TypeModeContext.prototype.exitRule = function(listener) {
    if(listener instanceof js_mappingListener ) {
        listener.exitTypeMode(this);
	}
};

TypeModeContext.prototype.accept = function(visitor) {
    if ( visitor instanceof js_mappingVisitor ) {
        return visitor.visitTypeMode(this);
    } else {
        return visitor.visitChildren(this);
    }
};




js_mappingParser.TypeModeContext = TypeModeContext;

js_mappingParser.prototype.typeMode = function() {

    var localctx = new TypeModeContext(this, this._ctx, this.state);
    this.enterRule(localctx, 18, js_mappingParser.RULE_typeMode);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 142;
        this.match(js_mappingParser.T__9);
        this.state = 143;
        this.groupTypeMode();
        this.state = 144;
        this.match(js_mappingParser.T__10);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Js_extendsContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = js_mappingParser.RULE_js_extends;
    return this;
}
